# bb

./: .gitignore  CMakeLists.txt  Jamroot  LICENSE  build.bat  copyTbs.sh  project-config.jam
BB/: .cproject  .project  CMakeLists.txt  Jamfile
BB.History/: CMakeLists.txt  bb-history.service
BB.History/src/: main.cpp
BB.Services/: .cproject  .project  CMakeLists.txt  Jamfile
BB.Services/definitions/: create.sh  data.xml  dbus.bat  sensor.xml  visualization.xml  webui.xml
BB.Services/include/BB/Services/: Data.h  DataSvc_DBus.h  Sensor.h  SensorSvc_DBus.h  Visualization.h  WebUI.h  WebUISvc_Json.h  WebUISvc_Jsonp.h
BB.Services/js/: Visualization.js  WebUI.js  WebUI.jsonp.js  WebUI.jsonrpc.js
BB.Services/src/: Data.cpp  DataSvc_DBus.cpp  Sensor.cpp  SensorSvc_DBus.cpp  Visualization.cpp  WebUI.cpp  WebUISvc_Json.cpp  WebUISvc_Jsonp.cpp
BB.Services/src/Client/: Data_DBus.h  Sensor_DBus.h  Visualization_Json.h  WebUI_Json.h
BB.Services/src/Server/: Data_DBus.h  Sensor_DBus.h  Visualization_Json.h  WebUI_Json.h
BB.WWW/: CMakeLists.txt  bb-new-www.service  index.html  mosquitto.conf
BB.WWW/data/fonts/: fontello.eot
BB.WWW/scripts/: indexBegin.html  indexEnd.html
BB.WWW/scripts/css/: base.css  full.css  home.css  local.css  skin-local.css
BB.WWW/scripts/css/libs/: table.css
BB.WWW/scripts/js/: app.js
BB.WWW/scripts/js/models/: model.mqtt.js  model.rules.js  models.js  pagemodels.js
BB.WWW/scripts/js/views/: ApplicationView.js  Component.Clock.View.js  Component.Data.Block.View.js  Component.Data.Graph.Modal.View.js  Component.Data.Summary.View.js  Component.Data.Summary.View2.js  Component.Data.View.js  Component.Date.View.js  Component.EventLog.View.js  Component.Filter.DataTypes.View.js  Component.Node.Edit.js  (+30 more)
BB.WWW/scripts/tpl/: Component.Clock.View.html  Component.Data.Block.View.html  Component.Data.Graph.Modal.View.html  Component.Data.Summary.View.html  Component.Data.Summary.View2.html  Component.Data.View.html  Component.Date.View.html  Component.EventLog.View.html  Component.Filter.DataTypes.View.html  Component.Filter.Places.View.html  Component.Graph.View.html  Component.Node.Edit.View.html  Component.Node.View.html  Component.Node.View2.html  Component.Rule.Action.View.html  Component.Rule.Condition.View.html  Component.Rule.View.html  Component.Setting.Edit.View.html  Component.Setting.Summary.View.html  ConnectionView.html  DeviceView.html  DummyView.html  HeaderView.html  Layout.Headline.View.html  Layout.SideMenu.View.html  Layout.TopMenu.View.html  Layout.View.html  MenuView.html  NodeView.html  Page.Data.View.html  Page.EventLog.View.html  Page.Full.View.html  Page.Graph.View.html  Page.Home.View.html  Page.Nodes.View.html  Page.Rules.View.html  RoomLinkView.html  SettingView.html
BB.WWW/src/: main.cpp
BB/include/BB/: App.h  App2.h  Configuration.h  DataRW.h  ForwardApp.h  NodeApp.h  Notification.h  RW.h  RuntimeStatus.h  SensorApp.h  SensorApp2.h  ServiceConfiguration.h  ServiceNotification.h
BB/include/MQTT/: MQTTClient.h  Types.h
BB/include/bonelib/: gpio.h  kbdio.h  leds.h
BB/src/: Configuration.cpp  DataRW.cpp  ForwardApp.cpp  NodeApp.cpp  Notification.cpp  RW.cpp  RuntimeStatus.cpp  SensorApp.cpp  SensorApp2.cpp  ServiceConfiguration.cpp  ServiceNotification.cpp
BB/src/Camera/: CameraService.cpp  CameraSnapshooter.cpp  FFMpegGrabber.cpp  FFMpegGrabber.h  OpenCVGrabber.cpp
BB/src/Forwarder/: BgForwarder.cpp  Cache.cpp  Filter.cpp  FilteringForwarder.cpp  IForwarder.cpp
BB/src/MQTT/: MQTTClient.cpp  Types.cpp
BB/src/Node/: INode.cpp  NodeFactory.cpp  NodeHelpers.cpp  NodeHistory.cpp  NodeManager.cpp  NodeTypes.cpp
BB/src/Rules/: Facts.cpp  ForgetFactAction.cpp  IAction.cpp  ICondition.cpp  IFact.cpp  MultipleAction.cpp  Rule.cpp  RuleEngine.cpp  Rules.cpp  Serialization.cpp
BB/src/Screen/: IScreen.cpp  NokiaScreen.cpp  OpenCvScreen.cpp
BB/src/Sensor/: ISensor.cpp  SensorData.cpp  SensorData2.cpp  SensorDataHelpers.cpp
BB/src/Serial/: SerialMessage.cpp
BB/src/Service/: DataSender.cpp  DataSender2.cpp
BB/src/Task/: CaptureCameraTask.cpp  Task.cpp  UpdateStatusTask.cpp
BB/src/bonelib/: gpio.cpp  kbdio.cpp  leds.cpp  pinmux.cpp
TBS/: .cproject  CMakeLists.txt
TBS.Services/: .cproject  CMakeLists.txt
TBS.Services/include/DotNet/: DotNetClient.h
TBS.Services/include/dbus-c++/: eventloop-win.h  eventloop.h
TBS.Services/include/jsonrpc/: AbstractServerConnector.h  Convertor.h  ServiceHandlers.h  client.h  clientconnector.h  procedure.h  rpcprotocolserver.h  serverconnector.h  serverinterface.h
TBS.Services/include/serial/: serial.h
TBS.Services/src/DotNet/: DotNetClient.cpp
TBS.Services/src/dbuscpp/: ConnectionManager.h  connection.cpp  dispatcher.cpp  eventloop-integration.cpp
TBS.Services/src/jsonrpc/: ServiceHandlers.cpp  errors.cpp  procedure.cpp  rpcprotocolserver.cpp
TBS.Services/src/serial/: serial.cpp
TBS.Services/tools/Generator/: Generator.cpp  InterfaceGenerator.cpp
TBS/include/: BtSharedPtr.h  ObjectFactory.h  PocoEventChaining.h
TBS/include/TBS/: BLOB.h  Command.h  CommandNotification.h  DatabaseTransaction.h  File.h  INotificationWorker.h  JsonValueGetter.h  Log.h  NamedActivity.h  NotificationBasedRunnable.h  NotificationWorker.h  ObservableEvent.h  OutputNotification.h  ReadableEnum.h  TBS.h  ThreadStatus.h
TBS/include/json/: writer.h
TBS/src/TBS/: CommandNotification.cpp  File.cpp  INotificationWorker.cpp  JsonValueGetter.cpp  Log.cpp  NotificationBasedRunnable.cpp  NotificationWorker.cpp  ReadableEnum.cpp  SimpleTimer.cpp  ThreadStatus.cpp  TimerNotifier.cpp
TBS/src/json/: json_value.cpp
www/: CMakeLists.txt  bb-www.service  bb.js  configuration.js  index.html
www/amcharts/: amcharts.js
www/css/: local.css
www/js/: Visualization.js  amcharts.js.old  amcharts.mine.js  local.base.js  local.forecast.js  local.js  local.status.js  local.temperature.js
www/public/: configuration.js  index.html
www/public/css/: local.css
www/public/js/: WebUI.js  amcharts.mine.js  local.base.js  local.forecast.js  local.sensors.js  local.status.js  local.temperature.js
(+364 files in other folders)
